[gd_scene load_steps=19 format=2]

[ext_resource path="res://sprites/menu_bg.png" type="Texture" id=1]
[ext_resource path="res://sprites/play_button.png" type="Texture" id=2]
[ext_resource path="res://sprites/standings_icon.png" type="Texture" id=3]
[ext_resource path="res://sprites/shareme.png" type="Texture" id=4]
[ext_resource path="res://sprites/exit.png" type="Texture" id=5]
[ext_resource path="res://sprites/settings_icon.png" type="Texture" id=6]
[ext_resource path="res://sprites/rateme.png" type="Texture" id=7]
[ext_resource path="res://menu.gd" type="Script" id=8]
[ext_resource path="res://sprites/star.png" type="Texture" id=9]

[sub_resource type="DynamicFontData" id=1]
font_path = "res://assets/Imperial.otf"

[sub_resource type="DynamicFont" id=2]
size = 90
outline_size = 10
outline_color = Color( 0, 0, 0, 1 )
font_data = SubResource( 1 )

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="Animation" id=4]
length = 3.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("..:rect_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.6, 3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1.2, 1.2 ), Vector2( 1, 1 ) ]
}

[sub_resource type="DynamicFontData" id=5]
font_path = "res://assets/Imperial.otf"

[sub_resource type="DynamicFont" id=6]
size = 50
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = SubResource( 5 )

[sub_resource type="StyleBoxEmpty" id=7]

[sub_resource type="DynamicFontData" id=8]
font_path = "res://assets/Imperial.otf"

[sub_resource type="DynamicFont" id=9]
size = 72
font_data = SubResource( 8 )

[node name="menu" type="Node2D"]
script = ExtResource( 8 )

[node name="textureRect" type="TextureRect" parent="."]
margin_right = 600.0
margin_bottom = 1024.0
texture = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="game title" type="Label" parent="."]
margin_left = -2.32788
margin_top = 140.0
margin_right = 621.672
margin_bottom = 417.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color_shadow = Color( 0.14902, 0.14902, 0.14902, 1 )
text = "Spin
Shield"
align = 1
valign = 1
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="play_button2" type="Button" parent="."]
margin_left = 200.0
margin_top = 450.0
margin_right = 434.0
margin_bottom = 660.0
custom_styles/focus = SubResource( 3 )
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="play_button" type="Sprite" parent="play_button2"]
texture = ExtResource( 2 )
offset = Vector2( 100, 100 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="play_button2/play_button"]
autoplay = "rotate"
anims/rotate = SubResource( 4 )

[node name="score" type="Label" parent="."]
margin_left = 145.377
margin_top = 708.474
margin_right = 379.377
margin_bottom = 770.474
custom_fonts/font = SubResource( 6 )
text = "BEST : "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_top = 900.0
margin_right = 40.0
margin_bottom = 940.0
rect_min_size = Vector2( 600, 124 )
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="settings" type="Button" parent="HBoxContainer"]
margin_right = 120.0
margin_bottom = 124.0
rect_min_size = Vector2( 120, 0 )
custom_styles/focus = SubResource( 7 )
icon = ExtResource( 6 )
flat = true

[node name="standings" type="Button" parent="HBoxContainer"]
margin_left = 124.0
margin_right = 244.0
margin_bottom = 124.0
rect_min_size = Vector2( 120, 0 )
custom_styles/focus = SubResource( 7 )
icon = ExtResource( 3 )
flat = true

[node name="rateme" type="Button" parent="HBoxContainer"]
margin_left = 248.0
margin_right = 368.0
margin_bottom = 124.0
rect_min_size = Vector2( 120, 0 )
custom_styles/focus = SubResource( 7 )
icon = ExtResource( 7 )
flat = true

[node name="shareme" type="Button" parent="HBoxContainer"]
margin_left = 372.0
margin_right = 492.0
margin_bottom = 124.0
rect_min_size = Vector2( 120, 0 )
custom_styles/focus = SubResource( 7 )
icon = ExtResource( 4 )
flat = true

[node name="exit" type="Button" parent="HBoxContainer"]
margin_left = 496.0
margin_right = 606.0
margin_bottom = 124.0
rect_min_size = Vector2( 110, 0 )
custom_styles/focus = SubResource( 7 )
icon = ExtResource( 5 )
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="container" type="Container" parent="."]
anchor_right = 1.0
margin_left = 400.0
margin_right = 600.0
margin_bottom = 50.0
rect_min_size = Vector2( 200, 50 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureButton" type="Button" parent="container"]
modulate = Color( 0.184314, 0.729412, 0.784314, 1 )
margin_right = 200.0
margin_bottom = 106.0
rect_min_size = Vector2( 200, 50 )
rect_scale = Vector2( 0.5, 0.5 )
size_flags_vertical = 9
custom_fonts/font = SubResource( 9 )
text = ":"
icon = ExtResource( 9 )
flat = true
align = 2
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="play_button2" to="." method="_on_play_button2_pressed"]
[connection signal="pressed" from="HBoxContainer/standings" to="." method="_on_standings_pressed"]
[connection signal="pressed" from="HBoxContainer/exit" to="." method="_on_exit_pressed"]
[connection signal="pressed" from="container/TextureButton" to="." method="_on_TextureButton_pressed"]
